--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@
 !bin/console
 !bin/symfony_requirements
 /vendor/
+/node_modules/
 
 # Assets and user uploads
 /web/bundles/
@@ -50,3 +51,8 @@
 
 # Embedded web-server pid file
 /.web-server-pid
+
+###> pentatrion/vite-bundle ###
+/node_modules/
+/public/build/
+###< pentatrion/vite-bundle ###
