--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,13 @@
         "symfony/dotenv": "7.3.*",
         "symfony/flex": "^2",
         "symfony/form": "7.3.*",
-        "symfony/framework-bundle": "7.3.*",
+        "symfony/framework-bundle": "7.3",
         "symfony/http-client": "7.3.*",
         "symfony/property-access": "7.3.*",
         "symfony/runtime": "7.3.*",
         "symfony/security-csrf": "7.3.*",
         "symfony/twig-bundle": "7.3.*",
+        "symfony/validator": "7.3.*",
         "symfony/yaml": "7.3.*",
         "twig/extra-bundle": "^3.21"
     },
@@ -53,7 +54,6 @@
         "symfony/string": "7.3.*",
         "symfony/translation": "7.3.*",
         "symfony/ux-turbo": "^2.29",
-        "symfony/validator": "7.3.*",
         "symfony/web-link": "7.3.*",
         "symfony/web-profiler-bundle": "7.3.*",
         "twig/twig": "^2.12|^3.0"
