--- a/config/services.yaml
+++ b/config/services.yaml
@@ -34,6 +34,9 @@ services:
     Symfony\Component\Form\Extension\Validator\ValidatorTypeGuesser:
         arguments: ['@validator.mapping.class_metadata_factory']
         tags: ['form.type_guesser']
+
+    App\EventSubscriber\ExceptionConsoleSubscriber:
+        tags: ['kernel.event_subscriber']
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
@@ -41,3 +44,18 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\Db\Db:
+        arguments:
+            $conn: '@doctrine.dbal.default_connection'
+            $logger: '@?logger' # volitelné; smaž řádek, pokud logger nechceš
+            
+    http_client.cached:
+        class: Symfony\Component\HttpClient\CachingHttpClient
+        arguments:
+        - '@http_client'   # výchozí Symfony HttpClient
+        - '@cache.app'
+        - { default_ttl: 600 } # 10 min; můžeš upravit
+
+    App\Service\XmlFeedClient:
+        arguments:
+        $http: '@http_client.cached'  # injektuj cached klient
