--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -1,7 +1,13 @@
 monolog:
     channels:
         - deprecation # Deprecations are logged in the dedicated "deprecation" channel when it exists
+    handlers:
+        browser:
+            type: browser_console
+            level: debug
+            channels: ["!event"]
 
+        
 when@dev:
     monolog:
         handlers:
