--- a/composer.json
+++ b/composer.json
@@ -7,16 +7,16 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "doctrine/dbal": "^4.3",
-        "doctrine/doctrine-bundle": "^2.15",
+        "doctrine/dbal": "^4.3.3",
+        "doctrine/doctrine-bundle": "^2.16.1",
         "pentatrion/vite-bundle": "8.2",
-        "phpdocumentor/reflection-docblock": "^5.6",
-        "phpoffice/phpspreadsheet": "^5.0",
-        "phpstan/phpdoc-parser": "^2.2",
+        "phpdocumentor/reflection-docblock": "^5.6.3",
+        "phpoffice/phpspreadsheet": "^5.1",
+        "phpstan/phpdoc-parser": "^2.3",
         "symfony/asset": "7.3.*",
         "symfony/console": "7.3.*",
         "symfony/dotenv": "7.3.*",
-        "symfony/flex": "^2",
+        "symfony/flex": "^2.8.2",
         "symfony/form": "7.3.*",
         "symfony/framework-bundle": "7.3",
         "symfony/http-client": "7.3.*",
@@ -31,10 +31,10 @@
         "twig/extra-bundle": "^3.21"
     },
     "require-dev": {
-        "doctrine/doctrine-migrations-bundle": "^3.4",
-        "doctrine/orm": "^3.5",
-        "phpunit/phpunit": "^11.5",
-        "symfony/apache-pack": "*",
+        "doctrine/doctrine-migrations-bundle": "^3.4.2",
+        "doctrine/orm": "^3.5.2",
+        "phpunit/phpunit": "^11.5.36",
+        "symfony/apache-pack": ">=1.0.1",
         "symfony/asset-mapper": "7.3.*",
         "symfony/browser-kit": "7.3.*",
         "symfony/css-selector": "7.3.*",
@@ -43,20 +43,20 @@
         "symfony/expression-language": "7.3.*",
         "symfony/intl": "7.3.*",
         "symfony/mailer": "7.3.*",
-        "symfony/maker-bundle": "*",
+        "symfony/maker-bundle": ">=1.64",
         "symfony/mime": "7.3.*",
-        "symfony/monolog-bundle": "^3.0",
+        "symfony/monolog-bundle": "^3.10",
         "symfony/notifier": "7.3.*",
         "symfony/process": "7.3.*",
         "symfony/security-bundle": "7.3.*",
-        "symfony/stimulus-bundle": "^2.29",
+        "symfony/stimulus-bundle": "^2.30",
         "symfony/stopwatch": "7.3.*",
         "symfony/string": "7.3.*",
         "symfony/translation": "7.3.*",
-        "symfony/ux-turbo": "^2.29",
+        "symfony/ux-turbo": "^2.30",
         "symfony/web-link": "7.3.*",
         "symfony/web-profiler-bundle": "7.3.*",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.21.1"
     },
     "config": {
         "allow-plugins": {
